--- a/index.html
+++ b/index.html
@@ -1,13 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Recipe Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <nav>
+            <h1>My Recipe Portfolio</h1>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#recipes">Recipes</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
-    <link href="styles.css" rel="stylesheet" />
+    <section id="about" class="hero">
+        <div class="hero-content">
+            <h2>Welcome to My Recipe Collection</h2>
+            <p>Discover delicious homemade recipes curated with love and passion.</p>
+            <a href="#recipes" class="btn">Explore Recipes</a>
+        </div>
+    </section>
 
-    <title>Rocket Academy</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-  </body>
+    <section id="recipes" class="recipes">
+        <h2>Featured Recipes</h2>
+        <div class="recipes-container">
+            <div class="recipe">
+                <h3>Classic Spaghetti Bolognese</h3>
+                <p>A rich and hearty Italian favorite made with fresh ingredients.</p>
+            </div>
+            <div class="recipe">
+                <h3>Homemade Sushi Rolls</h3>
+                <p>Fresh, simple, and delicious sushi rolls for every occasion.</p>
+            </div>
+            <div class="recipe">
+                <h3>Chocolate Lava Cake</h3>
+                <p>A warm and gooey dessert perfect for chocolate lovers.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="contact">
+        <h2>Get in Touch</h2>
+        <p>Email: chef@email.com</p>
+        <p>Instagram: <a href="https://instagram.com/chefusername" target="_blank">@chefusername</a></p>
+        <p>Food Blog: <a href="https://chefblog.com" target="_blank">chefblog.com</a></p>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Your Name. All rights reserved.</p>
+    </footer>
+</body>
 </html>
