Update portfolio content and styling for improved presentation

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Recipe Portfolio</title>
+    <title>Software & Engineering Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
-            <h1>My Recipe Portfolio</h1>
+            <h1>Software & Engineering Portfolio</h1>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#recipes">Recipes</a></li>
+                <li><a href="#projects">Projects</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -20,39 +20,51 @@
 
     <section id="about" class="hero">
         <div class="hero-content">
-            <h2>Welcome to My Recipe Collection</h2>
-            <p>Discover delicious homemade recipes curated with love and passion.</p>
-            <a href="#recipes" class="btn">Explore Recipes</a>
+            <h2>Welcome to My Portfolio</h2>
+            <p>I'm AbdulRahman Alam, an Electronics & Software Engineer specializing in fintech, embedded systems, 
+            and full-stack development. I thrive in fast-paced environments, building innovative solutions with 
+            expertise in C++, JavaScript, React, Django, and more.</p>
+            <a href="#projects" class="btn">Explore My Work</a>
         </div>
     </section>
 
-    <section id="recipes" class="recipes">
-        <h2>Featured Recipes</h2>
-        <div class="recipes-container">
-            <div class="recipe">
-                <h3>Classic Spaghetti Bolognese</h3>
-                <p>A rich and hearty Italian favorite made with fresh ingredients.</p>
+    <section id="projects" class="projects">
+        <h2>Featured Projects</h2>
+        <div class="projects-container">
+            <div class="project">
+                <h3>Checkers Game</h3>
+                <p>Developed a web-based Checkers game using HTML, CSS, and JavaScript, implementing 
+                American rules with DOM manipulation.</p>
             </div>
-            <div class="recipe">
-                <h3>Homemade Sushi Rolls</h3>
-                <p>Fresh, simple, and delicious sushi rolls for every occasion.</p>
+            <div class="project">
+                <h3>MealMate</h3>
+                <p>A full-stack food ordering system built using MongoDB, Express.js, React.js, and Node.js, 
+                featuring authentication and responsive UI.</p>
             </div>
-            <div class="recipe">
-                <h3>Chocolate Lava Cake</h3>
-                <p>A warm and gooey dessert perfect for chocolate lovers.</p>
+            <div class="project">
+                <h3>GA-Attendance</h3>
+                <p>A student attendance system developed using Django and PostgreSQL, enabling class 
+                management and attendance tracking.</p>
+            </div>
+            <div class="project">
+                <h3>Robotic Vehicle</h3>
+                <p>Developed an award-winning robotic vehicle as part of an AWS internship, integrating 
+                automation and IoT technologies.</p>
             </div>
         </div>
     </section>
 
     <section id="contact" class="contact">
         <h2>Get in Touch</h2>
-        <p>Email: chef@email.com</p>
-        <p>Instagram: <a href="https://instagram.com/chefusername" target="_blank">@chefusername</a></p>
-        <p>Food Blog: <a href="https://chefblog.com" target="_blank">chefblog.com</a></p>
-    </section>
+        <p>
+            <a href="mailto:abdulrahmanidrees@gmail.com">Email</a> | 
+            <a href="https://www.linkedin.com/in/abdulrahmanalam23/" target="_blank">LinkedIn</a> | 
+            <a href="https://github.com/Sabretooth2438" target="_blank">GitHub</a>
+        </p>
+    </section>    
 
     <footer>
-        <p>&copy; 2025 Your Name. All rights reserved.</p>
+        <p>&copy; 2025 AbdulRahman Alam. All rights reserved.</p>
     </footer>
 </body>
 </html>
